# QuantisedEncoder

./: .gitignore  Dockerfile  LICENSE  PYPI.md  README.md  bootstrap.sh  environment.yml  main.nf  main.py  nextflow.config  pyproject.toml  sweep.yaml
fungalplm/: __init__.py  __main__.py  api.py  model.py
hf/: README.md
notebooks/: length_distribution.ipynb
